@@ -59,6 +59,11 @@ debhelper (9.20150811+unreleased) UNRELEASED; urgency=medium
   * dh: Call dh_strip_nondeterminism during build.
     (Closes: #759895)
 
+  [ Colin Watson ]
+  * Buildsystem.pm: Fix doit_in_sourcedir/doit_in_builddir to
+    always chdir back to the original directory even if the
+    subprocess exits non-zero.  (Closes: #798116)
+
  -- Paul Tagliamonte <paultag@debian.org>  Fri, 14 Aug 2015 21:25:16 +0200
 
 debhelper (9.20150811) unstable; urgency=medium
